# Lazy-Train-and-K-CBS

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  example_solution.txt  example_solution_with_waits.txt  waits_example.txt
CBS-exp/: 0obs-20x20mapCBSPlot.ipynb  0obs-20x20mapPlot.ipynb  commandsRepeatResult.txt  debugLog-asy.txt  generate-rc-agent20x20.py  get-summary.py  run-20x20-random.py  run-brc202d-kdelay.py  run-kdelay.py
CBS-exp/agent/: 0obs-20x20map-2agents-1.agents  0obs-20x20map-2agents-2.agents  0obs-20x20map-2agents-3.agents  0obs-20x20map-2agents-4.agents  0obs-20x20map-2agents-5.agents  0obs-20x20map-2agents-6.agents  0obs-20x20map-2agents-7.agents  0obs-20x20map-2agents-8.agents  10obs-20x20map-40agents-0.agents  kcar-0obs-20x20map-2agents-2.agents
CBS-exp/map/: 0obs-20x20.map  10obs-20x20.map
CBS-exp/map/brc202d/: brc202d.map
CBS-exp/map/brc202d.map/: brc202d.map
CBS-exp/outputs/: 20x20map-CBSH-CR.csv  20x20map-CBSH-R.csv  20x20map-CBSH-RM.csv  20x20map-CBSH.csv
CBS-exp/outputs/0obs-20x20-random/: algo=CBSH-CR_agents=12_ins=0_k=0  algo=CBSH-CR_agents=12_ins=0_k=1  algo=CBSH-CR_agents=12_ins=0_k=2  algo=CBSH-CR_agents=12_ins=0_k=3  algo=CBSH-CR_agents=12_ins=10_k=0  algo=CBSH-CR_agents=12_ins=10_k=1  algo=CBSH-CR_agents=12_ins=10_k=2  algo=CBSH-CR_agents=12_ins=10_k=3  algo=CBSH-CR_agents=12_ins=11_k=0  algo=CBSH-CR_agents=12_ins=11_k=1  algo=CBSH-CR_agents=12_ins=11_k=2  algo=CBSH-CR_agents=12_ins=11_k=3  algo=CBSH-CR_agents=12_ins=12_k=0  algo=CBSH-CR_agents=12_ins=12_k=2  algo=CBSH-CR_agents=12_ins=12_k=3  algo=CBSH-CR_agents=12_ins=13_k=0  algo=CBSH-CR_agents=12_ins=13_k=1  algo=CBSH-CR_agents=12_ins=13_k=2  algo=CBSH-CR_agents=12_ins=13_k=3  algo=CBSH-CR_agents=12_ins=14_k=0  algo=CBSH-CR_agents=12_ins=14_k=1  algo=CBSH-CR_agents=12_ins=14_k=3  algo=CBSH-CR_agents=12_ins=15_k=0  algo=CBSH-CR_agents=12_ins=15_k=1  algo=CBSH-CR_agents=12_ins=15_k=2  algo=CBSH-CR_agents=12_ins=15_k=3  algo=CBSH-CR_agents=12_ins=16_k=0  algo=CBSH-CR_agents=12_ins=16_k=1  algo=CBSH-CR_agents=12_ins=16_k=2  algo=CBSH-CR_agents=12_ins=16_k=3  algo=CBSH-CR_agents=12_ins=17_k=0  algo=CBSH-CR_agents=12_ins=17_k=1  algo=CBSH-CR_agents=12_ins=17_k=2  algo=CBSH-CR_agents=12_ins=17_k=3  algo=CBSH-CR_agents=12_ins=18_k=0  algo=CBSH-CR_agents=12_ins=18_k=1  algo=CBSH-CR_agents=12_ins=18_k=2  algo=CBSH-CR_agents=12_ins=18_k=3  algo=CBSH-CR_agents=12_ins=19_k=0  algo=CBSH-CR_agents=12_ins=19_k=1  (+2020 more)
CBS-exp/outputs/0obs-20x20map/: 0obs-20x20map-algo_CBSH-CR-rc_1-k_0  0obs-20x20map-algo_CBSH-CR-rc_1-k_1  0obs-20x20map-algo_CBSH-CR-rc_1-k_3  0obs-20x20map-algo_CBSH-CR-rc_2-k_0  0obs-20x20map-algo_CBSH-CR-rc_2-k_1  0obs-20x20map-algo_CBSH-CR-rc_2-k_2  0obs-20x20map-algo_CBSH-CR-rc_2-k_3  0obs-20x20map-algo_CBSH-CR-rc_3-k_0  0obs-20x20map-algo_CBSH-CR-rc_3-k_1  0obs-20x20map-algo_CBSH-CR-rc_3-k_2  0obs-20x20map-algo_CBSH-CR-rc_3-k_3  0obs-20x20map-algo_CBSH-CR-rc_4-k_0  0obs-20x20map-algo_CBSH-CR-rc_4-k_1  0obs-20x20map-algo_CBSH-CR-rc_4-k_2  0obs-20x20map-algo_CBSH-CR-rc_4-k_3  0obs-20x20map-algo_CBSH-CR-rc_5-k_0  0obs-20x20map-algo_CBSH-CR-rc_5-k_1  0obs-20x20map-algo_CBSH-CR-rc_5-k_2  0obs-20x20map-algo_CBSH-CR-rc_5-k_3  0obs-20x20map-algo_CBSH-CR-rc_6-k_0  0obs-20x20map-algo_CBSH-CR-rc_6-k_1  0obs-20x20map-algo_CBSH-CR-rc_6-k_2  0obs-20x20map-algo_CBSH-CR-rc_6-k_3  0obs-20x20map-algo_CBSH-CR-rc_7-k_0  0obs-20x20map-algo_CBSH-CR-rc_7-k_1  0obs-20x20map-algo_CBSH-CR-rc_7-k_2  0obs-20x20map-algo_CBSH-CR-rc_7-k_3  0obs-20x20map-algo_CBSH-CR-rc_8-k_0  (+29 more)
CBS-exp/outputs/0obs-20x20map-CBS/: algo=CBSH_rc=1_k=0  algo=CBSH_rc=1_k=1  algo=CBSH_rc=1_k=2  algo=CBSH_rc=1_k=3  algo=CBSH_rc=1_k=4  algo=CBSH_rc=2_k=0  algo=CBSH_rc=2_k=1  algo=CBSH_rc=2_k=2  algo=CBSH_rc=2_k=3  algo=CBSH_rc=2_k=4  algo=CBSH_rc=3_k=0  algo=CBSH_rc=3_k=1  algo=CBSH_rc=3_k=2  algo=CBSH_rc=3_k=3  algo=CBSH_rc=3_k=4  algo=CBSH_rc=4_k=0  algo=CBSH_rc=4_k=1  algo=CBSH_rc=4_k=2  algo=CBSH_rc=4_k=3  algo=CBSH_rc=4_k=4  algo=CBSH_rc=5_k=0  algo=CBSH_rc=5_k=1  algo=CBSH_rc=5_k=2  algo=CBSH_rc=5_k=3  algo=CBSH_rc=5_k=4  algo=CBSH_rc=6_k=0  algo=CBSH_rc=6_k=1  algo=CBSH_rc=6_k=2  algo=CBSH_rc=6_k=3  algo=CBSH_rc=6_k=4  algo=CBS_rc=1_k=0  algo=CBS_rc=1_k=1  algo=CBS_rc=1_k=2  algo=CBS_rc=1_k=3  algo=CBS_rc=1_k=4  algo=CBS_rc=2_k=0  algo=CBS_rc=2_k=1  algo=CBS_rc=2_k=2  algo=CBS_rc=2_k=3  algo=CBS_rc=2_k=4  (+21 more)
CBSH-rect-cmake/: CBSH-rect-cmake.cpp  CBSH-rect-cmake.h  CMakeLists.txt  Conflict.cpp  Conflict.h  ConstraintTable.cpp  ConstraintTable.h  CorridorReasoning.cpp  CorridorReasoning.h  ICBSHSearchPairAnalysis.cpp  ICBSHSearchPairAnalysis.h  ICBSNode.cpp  ICBSNode.h  ICBSSearch.cpp  ICBSSearch.h  LLNode.cpp  LLNode.h  MDD.cpp  MDD.h  MDDNode.cpp  MDDNode.h  Path.h  RectangleReasoning.cpp  RectangleReasoning.h  ReservationTable.cpp  ReservationTable.h  SingleAgentICBS.cpp  SingleAgentICBS.h  agents_loader.cpp  agents_loader.h  back_up.cpp  common.cpp  common.h  compute_heuristic.cpp  compute_heuristic.h  driver.cpp  flat_map_loader.cpp  flat_map_loader.h  map_loader.cpp  map_loader.h
PythonCBS/: CMakeLists.txt  FlatAgentLoader.cpp  FlatAgentLoader.h  PythonCBS.cpp  PythonCBS.h  test.py
corridor/: CMakeLists.txt  Conflict.h  ConstraintTable.cpp  ConstraintTable.h  CorridorReasoning.cpp  CorridorReasoning.h  ICBSNode.h  ICBSSearch.cpp  ICBSSearch.h  LLNode.h  MDD.cpp  MDD.h  RectangleReasoning.cpp  RectangleReasoning.h  SingleAgentICBS.cpp  SingleAgentICBS.h  agents_loader.cpp  common.h  compute_heuristic.cpp  compute_heuristic.h  driver.cpp  map_loader.cpp  map_loader.h
example/: 0.agents  32_32_10_15.agents  32_32_20_12_k2_rm3.agents  brc202d_20_2.agents  brc202d_20_7.agents  den520d_20_1.agents  large-warehouse_30_1_k1_target_fail.agents  test.out
exp-scripts/: get_summary.py  plots.ipynb  plots.py  run-flatland-variant2.py  run-parallel-variant1.py  run-parallel-variant3.py
exp-scripts/map/: 16-16-10.map  8-8-10.map  den312d.map  empty-16-16.map  large-warehouse.map  random-32-32-10.map  random-64-64-20.map
mapVisualiser/: Visualiser.cpp  Visualiser.h  visualizer.py
python_test/: test.py
(+9476 files in other folders)
