# CMakeList.txt : CMake project for CBSH-rect-cmake, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (CBSH-rect-cmake "CBSH-rect-cmake.cpp" "CBSH-rect-cmake.h")

# TODO: Add tests and install targets if needed.
